--- a/server/djangoapp/templates/djangoapp/contact.html
+++ b/server/djangoapp/templates/djangoapp/contact.html
@@ -18,11 +18,16 @@
         <a class="navbar-brand" href="/djangoapp">Best Cars</a>
         <div class="navbar-nav">
             <a class="nav-item nav-link" href="about">About Us</a>
-            <a class="nav-item nav-link" href="contact">Contact Us</a>
+            <a class="nav-item nav-link active" href="#">Contact Us</a>
         </div>
     </nav>
 
-    <!--Add a dealer table here -->
+    <h3>
+        Phone Number: 555-123-4567
+    </h3>
+    <h3>
+        Address: 123 Main Street, Anytown, USA
+    </h3>
 
     </body>
 
