--- a/server/djangoapp/templates/djangoapp/user_login.html
+++ b/server/djangoapp/templates/djangoapp/user_login.html
@@ -18,36 +18,27 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                    <form class="form-inline">
                         {% csrf_token %}
                         <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Username" name="username" >
-                            <input type="password" class="form-control" placeholder="Password" name="psw" >
-                            <button class="btn btn-primary" type="submit">Login</button>
+                            <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a>
                         </div>
                     </form>
                 </li>
             </ul>
     </nav>
-        <h2 class="ml-5">Sign Up</h2>
-        <form>
+        <h2 class="ml-5">Login</h2>
+        <form  action="{% url 'djangoapp:login' %}" method="post">
+            {% csrf_token %}
             <div class="form-group mr-5 ml-5">
               <label for="username">Username</label>
-              <input type="text" class="form-control" id="username" placeholder="Enter User Name:">
+              <input type="text" class="form-control" name="username" placeholder="Enter User Name:">
             </div>
-            <div class="form-group mr-5 ml-5">
-                <label for="first_name">First Name</label>
-                <input type="text" class="form-control" id="first_name" placeholder="Enter First Name:">
-              </div>
-              <div class="form-group mr-5 ml-5">
-                <label for="last_name">Last Name</label>
-                <input type="text" class="form-control" id="last_name" placeholder="Enter Last Name:">
-              </div>
             <div class="form-group mr-5 ml-5">
               <label for="password">Password</label>
-              <input type="password" class="form-control" id="password" placeholder="Enter Password:">
+              <input type="password" class="form-control" name="psw" placeholder="Enter Password:">
             </div>
-            <button type="submit" class="btn btn-primary ml-5">Sign Up</button>
+            <button type="submit" class="btn btn-primary ml-5">Login</button>
           </form>
     </body>
 </html>
