--- a/server/djangoapp/templates/djangoapp/user_login.html
+++ b/server/djangoapp/templates/djangoapp/user_login.html
@@ -38,6 +38,11 @@
               <label for="password">Password</label>
               <input type="password" class="form-control" name="psw" placeholder="Enter Password:">
             </div>
+            {% if message %}
+                <div class="form-group mr-5 ml-5">
+                    <label>{{message}}</label>
+                </div>
+            {% endif %}
             <button type="submit" class="btn btn-primary ml-5">Login</button>
           </form>
     </body>
