--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -10,6 +10,11 @@
     <link href="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.css" rel="stylesheet">
     <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.js"></script>
     <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
+    <script>
+        $(function() {
+          $('#table').bootstrapTable()
+        })
+      </script>
 
 </head>
 
@@ -45,15 +50,15 @@
                 {% endif %}
             </ul>
     </nav>
-    <table class="table">
+    <table class="table" id="table" data-filter-control="true">
         <thead class="thead-dark">
           <tr>
-            <th scope="col">ID</th>
-            <th scope="col">Dealer Name</th>
-            <th scope="col">City</th>
-            <th scope="col">Address</th>
-            <th scope="col">Zip</th>
-            <th scope="col">State</th>            
+            <th data-field="id">ID</th>
+            <th data-field="full_name">Dealer Name</th>
+            <th data-field="city">City</th>
+            <th data-field="address">Address</th>
+            <th data-field="zip">Zip</th>
+            <th data-field="state" data-filter-control="select">State</th>            
           </tr>
         </thead>
         <tbody>
@@ -61,7 +66,7 @@
             {% for dealer in dealers %}
             <tr>
             <th scope="row">{{dealer.id}}</th>
-            <td>{{dealer.short_name}}</td>
+            <td><a href="{% url 'djangoapp:dealer_details' dealer.id %}">{{dealer.full_name}}</a></td>
             <td>{{dealer.city}}</td>
             <td>{{dealer.address}}</td>
             <td>{{dealer.zip}}</td>
@@ -75,5 +80,4 @@
       </table>
 
     </body>
-
 </html>
