--- a/server/djangoapp/templates/djangoapp/add_review.html
+++ b/server/djangoapp/templates/djangoapp/add_review.html
@@ -11,6 +11,58 @@
 
 </head>
     <body>
-    <!--Add review form here -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="{% url 'djangoapp:index' %}">Best Cars</a>
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'djangoapp:about' %}">About Us</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'djangoapp:contact' %}">Contact Us</a>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                {% if user.is_authenticated %}
+                <li>
+                    <a class="btn btn-link" href="#">{{ user.username }}</a>
+                    <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
+                </li>
+                {% else %}
+                <li>
+                    <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                        {% csrf_token %}
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Username" name="username" >
+                            <input type="password" class="form-control" placeholder="Password" name="psw" >
+                            <button class="btn btn-primary" type="submit">Login</button>
+                            <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a>
+                        </div>
+                    </form>
+                </li>
+                {% endif %}
+            </ul>
+        </nav>
+
+        <h2 class="ml-5">Add Review</h2>
+        <form action="{% url 'djangoapp:add_review' dealer_id %}" method="post">
+            {% csrf_token %}
+            <div class="form-group mr-5 ml-5">
+              <label for="username">Username</label>
+              <input type="text" class="form-control" name="username" placeholder="Enter User Name:" required>
+            </div>
+            <div class="form-group mr-5 ml-5">
+                <label for="first_name">First Name</label>
+                <input type="text" class="form-control" name="first_name" placeholder="Enter First Name:" required>
+              </div>
+              <div class="form-group mr-5 ml-5">
+                <label for="last_name">Last Name</label>
+                <input type="text" class="form-control" name="last_name" placeholder="Enter Last Name:" required>
+              </div>
+            <div class="form-group mr-5 ml-5">
+              <label for="password">Password</label>
+              <input type="password" class="form-control" name="psw" placeholder="Enter Password:" required>
+            </div>
+            <button type="submit" class="btn btn-primary ml-5">Sign Up</button>
+        </form>
     </body>
 </html>
