--- a/server/djangoapp/templates/djangoapp/dealer_details.html
+++ b/server/djangoapp/templates/djangoapp/dealer_details.html
@@ -9,9 +9,57 @@
 
     <body>
 
-    <nav></nav>
-
-    <!-- Add reviews as cards -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="{% url 'djangoapp:index' %}">Best Cars</a>
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'djangoapp:about' %}">About Us</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'djangoapp:contact' %}">Contact Us</a>
+            </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+            {% if user.is_authenticated %}
+            <li>
+                <a class="btn btn-link" href="djangoapp/add_review/{{dealer_id}}">Add Review</a>
+                <a class="btn btn-link" href="#">{{ user.username }}</a>
+                <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
+            </li>
+            {% else %}
+            <li>
+                <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                    {% csrf_token %}
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Username" name="username" >
+                        <input type="password" class="form-control" placeholder="Password" name="psw" >
+                        <button class="btn btn-primary" type="submit">Login</button>
+                        <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a>
+                    </div>
+                </form>
+            </li>
+            {% endif %}
+        </ul>
+    </nav>
+    <h1>Reviews</h1>
+    <div class="card-columns">
+        {% for review in reviews %}
+            <div class="card">
+                {% if review.sentiment == 'positive' %}
+                    <img class="card-img-left" src="{{MEDIA_URL}}/emoji/positive.png" height="30" width="30">
+                {% elif review.sentiment == 'negative' %}
+                    <img class="card-img-left" src="{{MEDIA_URL}}/emoji/negative.png" height="30" width="30">
+                {% else %}
+                    <img class="card-img-left" src="{{MEDIA_URL}}/emoji/neutral.png" height="30" width="30">
+                {% endif %}
+                <div class="card-body">
+                    <h5 class="card-title">{{review.car_model}}, {{review.car_make}}</h5>
+                    <h5 class="card-title">{{review.car_year}}</h5>
+                    <p class="card-text">{{review.review}}</p>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
 
     </body>
 
