--- a/server/djangoapp/templates/djangoapp/dealer_details.html
+++ b/server/djangoapp/templates/djangoapp/dealer_details.html
@@ -22,7 +22,7 @@
         <ul class="nav navbar-nav navbar-right">
             {% if user.is_authenticated %}
             <li>
-                <a class="btn btn-link" href="djangoapp/add_review/{{dealer_id}}">Add Review</a>
+                <a class="btn btn-link" href="{% url 'djangoapp:add_review' dealer_id%}">Add Review</a>
                 <a class="btn btn-link" href="#">{{ user.username }}</a>
                 <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
             </li>
