Finished add reviews

--- a/server/djangoapp/templates/djangoapp/add_review.html
+++ b/server/djangoapp/templates/djangoapp/add_review.html
@@ -8,7 +8,6 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/js/bootstrap-datepicker.js"></script>
-
 </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -47,22 +46,30 @@
         <form action="{% url 'djangoapp:add_review' dealer_id %}" method="post">
             {% csrf_token %}
             <div class="form-group mr-5 ml-5">
-              <label for="username">Username</label>
-              <input type="text" class="form-control" name="username" placeholder="Enter User Name:" required>
+              <label for="content">Enter the review content</label>
+              <textarea class="form-control" id="content" name="content" rows="2" required></textarea>
             </div>
             <div class="form-group mr-5 ml-5">
-                <label for="first_name">First Name</label>
-                <input type="text" class="form-control" name="first_name" placeholder="Enter First Name:" required>
-              </div>
-              <div class="form-group mr-5 ml-5">
-                <label for="last_name">Last Name</label>
-                <input type="text" class="form-control" name="last_name" placeholder="Enter Last Name:" required>
-              </div>
-            <div class="form-group mr-5 ml-5">
-              <label for="password">Password</label>
-              <input type="password" class="form-control" name="psw" placeholder="Enter Password:" required>
+                <input class="form-check-input" type="checkbox" name="purchasecheck" id="purchasecheck">Has purchased the car from this dealership?</input>
             </div>
-            <button type="submit" class="btn btn-primary ml-5">Sign Up</button>
+            <div class="form-group mr-5 ml-5">
+                <label for="car">Select your car (model-make-year):</label>
+                <select name="car" id="car" class="form-select" required>
+                    {% for car in cars %}
+                        <option selected value="{{car.name}}-{{car.carmake.name}}-{{ car.year|date:'Y' }}">{{car.name}}-{{car.carmake.name}}-{{ car.year|date:"Y" }}</option>
+                    {% endfor %}
+               </select>
+            </div>
+            <div class="form-group mr-5 ml-5">
+                <label for="purchasedate">Purchase Date:</label>
+                <input class="date-own form-control" type="text" name="purchasedate" id="purchasedate">
+            </div>
+            <button type="submit" class="btn btn-primary ml-5">Submit</button>
         </form>
     </body>
+    <script type="text/javascript">
+        $('.date-own').datepicker({
+           format: 'mm/dd/yyyy'
+         });
+   </script>
 </html>
